[tool.poetry]
name = "icon-search"
version = "0.1.0"
description = "Search for installed icons by name on the commandline"
authors = ["Merlin Sievers <merlin@sievers.dev>"]
license = "GPL v3"
readme = "README.md"
packages = [{include = "icon_search"}]

[tool.poetry.dependencies]
python = "^3.9"
pyfzf = "^0.3.1"
pygobject = "^3.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
